--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -42,6 +42,11 @@
     padding: 0;
 }
 
+img.person {
+    height: 282px;
+    width: 188px;
+}
+
 .logos-layout {
     width: 400px;
     height: 400px;
